# plasmapy-calculator

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml  update-pinned-reqs.yml
Calculator/: .gitignore  requirements.txt
Calculator/application/: calculations.py  routes.py
Calculator/application/templates/: base.html  debye_length.html  gyrofrequency.html  index.html  inertial_length.html  lengths.html  thermal_pressure.html  usage_texts_macros.html
Calculator/application/templates/includes/: nav.html  style.html
src/plasmapy_calculator/: __init__.py  main_interface.py  plasma_calculator.ipynb
