[build-system]
build-backend = "uv_build"

requires = [ "uv-build>=0.8.3,<0.9" ]

[project]
name = "plasmapy-calculator"
version = "0.1.0"
description = "A prototype plasma formulary calculator"
readme = "README.md"
authors = [
  { name = "Rajagopalan Gangadharan" },
  { name = "Erik Everson" },
  { name = "Nick Murphy", email = "namurphy@cfa.harvard.edu" },
]
requires-python = ">=3.10.14,<3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
]
dependencies = [
  "ipykernel==6.6.0",
  "ipywidgets==7.6.5",
  "plasmapy==0.7.0",
  "voila==0.3.0",
]

scripts.plasmapy-calculator = "plasmapy_calculator:main"

[dependency-groups]
dev = [
  "nox",
]
