[build-system]
build-backend = "uv_build"

requires = [ "uv-build>=0.8.3,<0.9" ]

[project]
name = "plasmapy-calculator"
version = "0.1.0"
description = "A prototype plasma formulary calculator"
readme = "README.md"
authors = [
  { name = "Rajagopalan Gangadharan" },
  { name = "Erik Everson" },
  { name = "Nick Murphy", email = "namurphy@cfa.harvard.edu" },
]
requires-python = ">=3.10,<3.11"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
]
dependencies = [
  "anyio==3.6.1",
  "argon2-cffi==21.3.0",
  "argon2-cffi-bindings==21.2.0",
  "astropy==5.1",
  "asttokens==2.0.5",
  "attrs==21.4.0",
  "backcall==0.2.0",
  "beautifulsoup4==4.11.1",
  "bleach==5.0.1",
  "cached-property==1.5.2",
  "cffi==1.15.1",
  "cycler==0.11.0",
  "debugpy==1.6.0",
  "decorator==5.1.1",
  "defusedxml==0.7.1",
  "entrypoints==0.4",
  "executing==0.8.3",
  "fastjsonschema==2.15.3",
  "fonttools==4.33.3",
  "idna==3.3",
  "ipykernel==6.15.0",
  "ipython==8.4.0",
  "ipython-genutils==0.2.0",
  "ipywidgets==7.6.5",
  "jedi==0.18.1",
  "jinja2==2.11.3",
  "jsonschema==4.6.1",
  "jupyter-client==6.1.12",
  "jupyter-core==4.10.0",
  "jupyter-server==1.18.1",
  "jupyterlab-pygments==0.2.2",
  "jupyterlab-widgets==1.1.1",
  "kiwisolver==1.4.3",
  "lxml==4.9.1",
  "markupsafe==2.0.1",
  "matplotlib==3.5.2",
  "matplotlib-inline==0.1.3",
  "mistune==0.8.4",
  "nbclient==0.5.13",
  "nbconvert==6.4.5",
  "nbformat==5.4.0",
  "nest-asyncio==1.5.5",
  "notebook==6.4.12",
  "numpy==1.23.0",
  "packaging==21.3",
  "pandas==1.4.3",
  "pandocfilters==1.5.0",
  "parso==0.8.3",
  "pexpect==4.8.0",
  "pickleshare==0.7.5",
  "pillow==9.2.0",
  "plasmapy==0.7.0",
  "prometheus-client==0.14.1",
  "prompt-toolkit==3.0.30",
  "psutil==5.9.1",
  "ptyprocess==0.7.0",
  "pure-eval==0.2.2",
  "pycparser==2.21",
  "pyerfa==2.0.0.1",
  "pygments==2.12.0",
  "pyparsing==3.0.9",
  "pyrsistent==0.18.1",
  "python-dateutil==2.8.2",
  "pytz==2022.1",
  "pyyaml==6.0",
  "pyzmq==23.2.0",
  "scipy==1.8.1",
  "send2trash==1.8.0",
  "setuptools==63.1.0",
  "six==1.16.0",
  "sniffio==1.2.0",
  "soupsieve==2.3.2.post1",
  "stack-data==0.3.0",
  "terminado==0.15.0",
  "testpath==0.6.0",
  "tornado==6.2",
  "tqdm==4.64.0",
  "traitlets==5.3.0",
  "voila==0.2.15",
  "wcwidth==0.2.5",
  "webencodings==0.5.1",
  "websocket-client==1.3.3",
  "widgetsnbextension==3.5.2",
  "xarray==2022.3.0",
]

scripts.plasmapy-calculator = "plasmapy_calculator:main"

[dependency-groups]
dev = [
  "nox",
]
